--- a/index.html
+++ b/index.html
@@ -1,95 +1,58 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>ALVARO KASILLAS DESIGN&amp;DECOR by Kasillas</title>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">ALVARO KASILLAS DESIGN&amp;DECOR</h1>
+        <p class="header">PIECES STRUCTURES PLANNINGS IN ALL TENDECES WITH PIECES OF AUTHOR  </p>
 
-	<title>Kasillas/Alvaro-Kasillas-catalogo-general @ GitHub</title>
-	
-	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: #579f8c;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-		h1 { font-size: 3.8em; color: #a86073; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
-		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #a86073; }
-    h3 { text-align: center; color: #a86073; }
-    a { color: #a86073; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-		pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-	</style>
-	
-</head>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/Kasillas/Alvaro-Kasillas-catalogo-general/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/Kasillas/Alvaro-Kasillas-catalogo-general/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/Kasillas/Alvaro-Kasillas-catalogo-general">View On GitHub</a></li>
+        </ul>
 
-<body>
-  <a href="http://github.com/Kasillas/Alvaro-Kasillas-catalogo-general"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/Kasillas">Kasillas</a></p>
 
-  <div id="container">
 
-    <div class="download">
-      <a href="http://github.com/Kasillas/Alvaro-Kasillas-catalogo-general/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/Kasillas/Alvaro-Kasillas-catalogo-general/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+      </header>
+      <section>
+        <p><a href="http://sallisak-4.hs-sites.com/products/prod">ALVARO KASILLAS DESIGN&amp;DECOR</a>### Welcome to GitHub Pages.
+<img src="PA-001" alt="ETXEBARRIA ENTRANCE "></p>
+
+<p>```&lt;!--BEGIN PARtNER PROGRAM-DO NO CHANGE THE PARAMETERS OF HYPERLINC--&gt;
+<a href=""> CUPON DE DESCUENTO 1&amp;1 HOSTING AGOSTO 2014</a><br><img src=""><br></p>
+
+
+
+<h3>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      </footer>
     </div>
-
-    <h1><a href="http://github.com/Kasillas/Alvaro-Kasillas-catalogo-general">Alvaro-Kasillas-catalogo-general</a>
-      <span class="small">by <a href="http://github.com/Kasillas">Kasillas</a></span></h1>
-
-    <div class="description">
-      Esculturas en piedra madera y hierro
-    </div>
-
-    <p>trabajos elaborados en materias primas de gran calidad y con 
-acabados de primera.</p><h2>Dependencies</h2>
-<p>ver archiboen http://Kasillas.es/google hostedservice.html</p>
-<h2>Install</h2>
-<p>con google</p>
-<h2>License</h2>
-<p>pub-8857679852332344.</p>
-<h2>Authors</h2>
-<p> Alvaro Kasillas     </p>
-<h2>Contact</h2>
-<p>Alvaro Kasillas (alvarokasillas.kasillas@gmail.com)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/Kasillas/Alvaro-Kasillas-catalogo-general/zipball/master">zip</a> or
-      <a href="http://github.com/Kasillas/Alvaro-Kasillas-catalogo-general/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/Kasillas/Alvaro-Kasillas-catalogo-general</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/Kasillas/Alvaro-Kasillas-catalogo-general">Kasillas/Alvaro-Kasillas-catalogo-general</a>
-    </div>
-
-  </div>
-
-  <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-16980251-www.Kasillas.es");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-</body>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
+  </body>
 </html>
